# CampusX_Langchain_in_depth

./: README.md  main.py  pyproject.toml  requirements.txt
RAG/: Agents_in_Langchain.ipynb  Langchain_Tools.ipynb  Youtube_Chatbot_RAG.ipynb
chains/: conditional_chain.py  parallel_chain.py  runnable_branch.py  runnable_lambda.py  runnable_parallel.py  runnable_passthrough.py  runnable_sequence.py  sequential_chain.py  simple_chain.py
document_loaders/: directory_loader.py  pdf_loader.py  text_loader.py  web_base_loader.py
models/chat_models/: chat_model_demo.py  chat_model_huggingface.py
models/embedding_models/: embedding_models_demo.py
models/llms/: llm_demo.py
prompts/: chat_history.txt  chat_message_placeholder.py  chat_prompt_templates.py  chatbot.py  chatbot_ui.py  messages.py  prompt_generator.py  prompts_ui.py  template.json
prompts/static/: style.css  style_chatbot.css
prompts/templates/: index.html  index_chatbot.html
retriever/: Retriever_Examples.ipynb
structured_outputs/: json_outputparser.py  pydantic_outputparser.py  stroutputparser.py  with_structured_output_json.py  with_structured_output_pydantic.py  with_structured_output_typeddict.py
text_spliters/: length_based_splitter.py  sementic_based_splitter.py
vector_stores/: example_chromadb.ipynb
vector_stores/my_chroma_db/: chroma.sqlite3
